--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
                 <div class="profile-photo">
                     <img src="./img/perfil-instagram.jpg" alt="foto de perfil">
                 </div>
-                <a href="#" class="instagram-login">Continue como bbarretob_</a>
+                <a href="#" class="instagram-login">Continue como BarbaraBarreto</a>
                 <a href="#" class="instagram-logout">Remover conta</a>
             </div>
             <div class="group">
-                <p class="not-account">Não é bbarretob_?</p>
+                <p class="not-account">Não é BarbaraBarreto?</p>
                 <p class="not-account">
                     <span class="link-blue">Alternar contas</span>
                     ou
